.k8s/apps/oratoria.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: oratoria
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: oratoria
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: ec5ae2f4a8ead17579e033e5948fdc3080c0a0e3
    kubenix/module-instance: oratoria
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: oratoria
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: oratoria
      app.kubernetes.io/name: oratoria
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: oratoria
        app.kubernetes.io/name: oratoria
    spec:
      automountServiceAccountToken: true
      containers:
        - envFrom:
            - secretRef:
                name: oratoria-config
          image: ghcr.io/josevictorferreira/oratoria:latest
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 5173
              name: http
              protocol: TCP
            - containerPort: 8765
              name: backend
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /app/data
              name: main
            - mountPath: /app/oratoria-web/vite.config.js
              name: vite-config
              readOnly: true
              subPath: vite.config.js
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      imagePullSecrets:
        - name: ghcr-registry-secret
      serviceAccountName: default
      volumes:
        - name: main
          persistentVolumeClaim:
            claimName: oratoria
        - configMap:
            name: oratoria-vite-config
          name: vite-config
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.152
    lbipam.cilium.io/sharing-key: oratoria
  labels:
    app.kubernetes.io/instance: oratoria
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: oratoria
    app.kubernetes.io/service: oratoria
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: ec5ae2f4a8ead17579e033e5948fdc3080c0a0e3
    kubenix/module-instance: oratoria
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: oratoria
  namespace: apps
spec:
  ports:
    - name: http
      port: 5173
      protocol: TCP
      targetPort: 5173
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: oratoria
    app.kubernetes.io/name: oratoria
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: oratoria
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: oratoria
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: ec5ae2f4a8ead17579e033e5948fdc3080c0a0e3
    kubenix/module-instance: oratoria
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: oratoria
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: oratoria.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: oratoria
                port:
                  number: 5173
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - oratoria.josevictor.me
      secretName: wildcard-tls
